TestSuite/errors/err0213.pas
function abs(var self: integer): integer; extensionmethod;
begin
end;
begin
  
end.